--- a/src/styles/snippets/_gallery.scss
+++ b/src/styles/snippets/_gallery.scss
@@ -46,5 +46,9 @@
 	img {
     width: auto;
     height: 340px;
+
+    @media screen and ( max-width: $medium ) {
+      height: 250px;
+    }
 	}
 }
